# Domotic-System

./: .gitignore  CMakeLists.txt  Dispositivo.cpp  Dispostivo.h  README.md  istruzioni-1.txt  istruzioni-2.txt  istruzioni.txt
.github/workflows/: cmake-multi-platform.yml
DomoticSystemLogs/: 12-01-25 19_22_13-Log.txt
Esempi-Log/: istruzioni-2.txt  logFile-1.txt  logFile-2.txt
include/: CreaDispositivo.h  Dispositivo.h  DispositivoNonTrovatoException.h  Interfaccia.h  InterfaceErrors.h  LinkedList.h  LinkedListOff.h  LinkedListOn.h  LinkedListProg.h  ListaDispositivi.h  ListaVuotaException.h  RicercaDispositivo.h
src/: CreaDispositivo.cpp  CreaDispositivo.h  CreaDispostivo.h  Dispositivo.cpp  Dispositivo.h  DispositivoCP.h  Dispostivo.h  Interfaccia.cpp  InterfaceErrors.cpp  LinkedList.cpp  LinkedListOff.cpp  LinkedListOn.cpp  LinkedListProg.cpp  ListaDispositivi.h  RicercaDispositivo.cpp  main.cpp  mainInterfaccia.cpp  mainNode.cpp
src/code/: CreaDispositivo.cpp  Dispositivo.cpp  Interfaccia.cpp  LinkedList.cpp  Node.cpp  RicercaDispositivo.cpp  main.cpp  mainNode.cpp
src/ext/: RicercaDispositivo.cpp
src/header/: CreaDispositivo.h  Dispositivo.h  Interfaccia.h  LinkedList.h  ListaDispositivi.h  Node.h
